Exercise 3 - Configure DNS auto registration/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress-dns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo.<YOUR_UNIQUE_PREFIX>.aks.becomeazure.ninja
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
